--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         <activity android:name=".HomePage" />
         <activity android:name=".Search" />
         <activity android:name=".Settings" />
-        <activity android:name=".Events"></activity>
+        <activity android:name=".Events" />
+        <activity android:name=".Friendsearch"></activity>
     </application>
 
 </manifest>
