--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,12 @@
         <activity android:name=".Settings" />
         <activity android:name=".Events" />
         <activity android:name=".Signup" />
+        <activity android:name=".About" />
+        <activity android:name=".FAQ" />
+        <activity android:name=".Security" />
+        <activity android:name=".Username" />
+        <activity android:name=".Interests" />
+        <activity android:name=".Legal" />
         <activity android:name=".TestActivity" />
         <activity
             android:name=".Event_Concert_Astroworld"
